# ghstar

./: CHANGELOG.md  README.md  ghstar.py  pyproject.toml
ghstar/: ghstar.py
